# centauro_walk

./: CMakeLists.txt  README.md  package.xml  perception.rviz
config/: centauro_base_estimation.yaml  centauro_config.yaml  centauro_controller_config.yaml  centauro_perception.yaml  cogimon_config.yaml  cogimon_controller_config.yaml  concert_config.yaml  concert_controller_config.yaml  config.rviz  contact_config.yaml  feet_config.yaml  kyon_config.yaml  kyon_config_new.yaml  kyon_controller.rviz  kyon_controller_config.yaml  kyon_feet_config.yaml  kyon_horizon_config.yaml  kyon_horizon_config_1.yaml  kyon_horizon_wheel_config.yaml  kyon_to_config.yaml  kyon_wheel_config.yaml  perception.world  wheel_config.yaml
config/elevation_mapping/: centauro_elevation_mapping_config.yaml  core_param.yaml  kyon_elevation_mapping_config.yaml  node.yaml
include/: controller.h  flush_me_maybe.h  mpc_handler.h  mpc_joint_handler.h  mpc_srbd_handler.h  perception.h  resampler.h  utils.h
launch/: centauro_controller.launch  centauro_simulator.launch  centauro_step_to.launch  cogimon_controller.launch  cogimon_simulator.launch  concert_controller.launch  concert_simulator.launch  controller.launch  kyon_controller.launch  kyon_simulator.launch  perception.launch  simulator.launch
msg/: FlushMeMaybe.msg  SRBDCoordinate.msg  SRBDTrajectory.msg  WBTrajectory.msg
python/: centauro_joy_commands.py  centauro_perception.py  centauro_receding_horizon.py  centauro_wheels.py  cogimon_receding_horizon.py  concert_joy_commands.py  concert_receding_horizon.py  contact_detection.py  contact_detection_ros.py  gazebo_environment.py  joy_commands.py  key_commands_deprecated.py  kyon_receding_horizon.py  kyon_receding_horizon_new.py  odom_publisher.py  push_environment.py  receding_horizon.py  receding_horizon_wheels.py  trajectory_opt.py
python/to_offline/: _crawl.py  _gap.py  _step_up.py  _trot.py  main.py  marker_spawner.py
rviz/: concert.rviz  kyon_controller.rviz
scripts/: xbot2_core
src/: controller.cpp  controller_node.cpp  flush_me_maybe.cpp  mpc_handler.cpp  mpc_joint_handler.cpp  mpc_srbd_handler.cpp  perception.cpp  perception_node.cpp  resampler.cpp
