<package format="2">
  <name>kyon_controller</name>
  <version>1.2.4</version>
  <description>
  repository for controlling the quadruped kyon
  </description>
  <maintainer email="luca.rossini@iit.it">luca</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>
</package>
